# MVP

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: registry.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: entities.py
app/repositories/: registry.py
app/schemas/: registry.py
app/services/export/: xlsx_exporter.py
app/services/imap/: collector.py
app/services/nextcloud/: client.py
app/services/numbering/: service.py
app/services/registry/: service.py
app/tasks/: polling.py  scheduler.py
app/templates/: registry.html
app/ui/: registry.py
migrations/: env.py
migrations/versions/: 47f3b5173084_initial_schema.py
tests/: test_imap_parser.py  test_rbac_api.py  test_registry_service.py
