[project]
name = "mail-registry-mvp"
version = "0.2.0"
description = "MVP системы учета входящей и исходящей электронной корреспонденции"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pydantic-settings>=2.3.4",
  "alembic>=1.13.2",
  "openpyxl>=3.1.5",
  "python-multipart>=0.0.9",
  "requests>=2.32.0",
  "apscheduler>=3.10.4",
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
